-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 11.0.0
-
-
9c2527eea (11.0)
Qt creator always doing clean and build when switching to an iOS or Android kit, It always happens when switching from iOS to android and back to iOS.
This does not happen when switching to desktop kit (macOS).
Environment: macOS 13.5 on an M1 Max MacBook Pro.
Note: This is a regression in 11.0.0, Qt Creator 10.0.1 and earlier did not exhibit this behavior.
- relates to
-
QTCREATORBUG-29481 [Reg 10.x? -> 11.0] Qt Creator forcibly wipes the build folder when switching configurations on macOS
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-29451 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
495509,2 | QmakeProjectManager: Do not run the clean steps spuriously | 11.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |