QmakeProjectManager: Do not run the clean steps spuriously

Amends c73266783875e49dbb4722ff673119c8213f993e.

Fixes: QTCREATORBUG-29451
Fixes: QTCREATORBUG-29481
Change-Id: Ib79977d49ec7650f025887ec956efde45a8efb7c
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>