src/plugins/qmakeprojectmanager/qmakestep.h
@@ -155,7 +155,6 @@ private:
 
     void updateAbiWidgets();
     void updateEffectiveQMakeCall();
-    void handleAbiWidgetChange();
 
     Utils::CommandLine m_qmakeCommand;
     Utils::CommandLine m_makeCommand;
